# mcp-pymupdf

./: .gitignore  .mcpregistry_registry_token  LICENSE  README.md  pyproject.toml  server.json
mcp_pymupdf/: __init__.py  server.py
tests/: test_server.py
