[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-pymupdf"
version = "0.1.1"
description = "MCP server for reading PDFs using PyMuPDF. Supports local files and URLs."
authors = [{ name = "Jason Parker" }]
license = { text = "MIT" }
requires-python = ">=3.13"
readme = "README.md"
keywords = ["mcp", "pdf", "pymupdf", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "hatch>=1.17.0",
    "mcp>=1.0.0",
    "pymupdf>=1.24.0",
    "pytest>=9.1.1",
    "requests>=2.28.0",
    "twine>=6.2.0",
]

[project.scripts]
mcp-pymupdf = "mcp_pymupdf.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_pymupdf"]
